# blackhole-token-burner

./: Cargo.toml  Dockerfile  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  rust-toolchain.toml
src/blackhole-token-burner/: Cargo.toml  service.did
src/blackhole-token-burner-backend/: Cargo.toml
src/blackhole-token-burner-frontend/: package.json
src/blackhole-token-burner-frontend/src/: App.js
src/blackhole-token-burner/src/: lib.rs  types.rs
